Add general rule to makefiles. Add some header files and preliminary logger module

--- a/SimpleClient/makefile
+++ b/SimpleClient/makefile
@@ -28,6 +28,9 @@ $(ODIR)/%.o: $(SDIR)/%.c $(DEPS)
 client: $(OBJ)
 	$(CC) -o $(BDIR)/$@ $^ $(CFLAGS) $(LIBS)
 
+# General rule
+all: client
+
 # Don't interpret any file called "clean"!
 .PHONY: clean
 
